--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -265,7 +265,7 @@
     <nav>
         <div class="container">
             <ul class="nav-list">
-                <li  class="active"><a href="{{ ('dashboard') }}">Dashboard</a></li>
+                <li><a href="{{ ('dashboard') }}">Dashboard</a></li>
                 <li><a href="{{ ('inventory') }}">Inventory Management</a></li>
                
                 <li><a href="#analytics">Predictive Analytics</a></li>
