--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -119,7 +119,7 @@
             </div>
             <div class="user-info">
                 <div class="notification-icon">
-                    <i class="fas fa-bell"></i>
+                    <a  href="{{ ('alert') }}"><i class="fas fa-bell"></i></a>
                     <span class="notification-count">3</span>
                 </div>
                 <div class="notification-icon">
@@ -163,7 +163,6 @@
         <aside class="sidebar">
             <ul class="sidebar-menu">
                 <li><a href="{{ ('dashboard') }}"><i class="fas fa-tachometer-alt"></i> Summary</a></li>
-                <li><a href="{{ ('alert') }}"><i class="fas fa-exclamation-circle"></i> Alerts</a></li>
                 <li><a href="{{ ('weather') }}"><i class="fas fa-cloud-sun"></i> Weather Impact</a></li>
                 <li class="active"><a href="{{ ('calendar') }}"><i class="fas fa-calendar-alt"></i> Calendar</a></li>
             </ul>
