--- a/templates/profile.html
+++ b/templates/profile.html
@@ -252,7 +252,7 @@
                 <li  class="active"><a href="{{ ('dashboard') }}">Dashboard</a></li>
                 <li><a href="{{ ('inventory') }}">Inventory Management</a></li>
                
-                <li><a href="#analytics">Predictive Analytics</a></li>
+                <li><a href="{{ ('prediction') }}">Predictive Analytics</a></li>
                 <li><a href="{{ ('procurment') }}">Procurement</a></li>
                 <li><a href="{{ ('report') }}">Reports</a></li>
             </ul>
