--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -158,7 +158,7 @@
             <ul class="nav-list">
                 <li><a href="{{ ('dashboard') }}">Dashboard</a></li>
                 <li class="active"><a href="{{ ('inventory') }}">Inventory Management</a></li>
-                <li><a href="#analytics">Predictive Analytics</a></li>
+                <li><a href="{{ ('prediction') }}">Predictive Analytics</a></li>
                 <li><a href="{{ ('procurment') }}">Procurement</a></li>
                 <li><a href="{{ ('report') }}">Reports</a></li>
             </ul>
@@ -172,7 +172,7 @@
             <ul class="sidebar-menu">
                 <li><a href="#overview"><i class="fas fa-home"></i> Overview</a></li>
                 <li class="active"><a href="{{ ('inventory') }}"><i class="fas fa-warehouse"></i> Stock Levels</a></li>
-                <li><a href="#ai-predictions"><i class="fas fa-chart-line"></i> AI Predictions</a></li>
+                <li><a href="{{ ('prediction') }}"><i class="fas fa-chart-line"></i> AI Predictions</a></li>
                 <li><a href="{{ ('deliveries') }}"><i class="fas fa-truck"></i> Deliveries</a></li>
                 <li><a href="{{ ('contracts') }}"><i class="fas fa-file-contract"></i> Contracts</a></li>
                 <li><a href="{{ ('hazard_management') }}"><i class="fas fa-exclamation-triangle"></i> Hazard Management</a></li>
