--- a/templates/weather.html
+++ b/templates/weather.html
@@ -939,7 +939,7 @@
             <ul class="nav-list">
                 <li class="active"><a href="{{ ('dashboard') }}">Dashboard</a></li>
                 <li><a href="{{ ('inventory') }}">Inventory Management</a></li>
-                <li><a href="#analytics">Predictive Analytics</a></li>
+                <li><a href="{{ ('prediction') }}">Predictive Analytics</a></li>
                 <li><a href="{{ ('procurment') }}">Procurement</a></li>
                 <li><a href="{{ ('report') }}">Reports</a></li>
             </ul>
